<resources>
    <string name="app_name">PDDexam Aplication</string>
    <string name="back">Back</string>
    <string name="start_test">Экзамен</string>
    <string name="_1">Вопрос 1</string>
    <string name="_2">вопрос 2</string>
    <string name="_3">Вопрос 3</string>
    <string name="_4">Вопрос 4</string>
    <string name="_5">Вопрос 5</string>
    <string name="_6">Вопрос 6</string>
    <string name="_7">Вопрос 7</string>
    <string name="_8">Вопрос 8</string>
    <string name="_9">Вопрос 9</string>
    <string name="resName">Список вопросов:</string>
    <string name="_11">Вопрос 11</string>
    <string name="_10">Вопрос 10</string>
    <string name="_12">Вопрос 12</string>
    <string name="_13">Вопрос 13</string>
    <string name="_14">Вопрос 14</string>
    <string name="_15">Вопрос 15</string>
    <string name="_16">Вопрос 16</string>
    <string name="_17">Вопрос 17</string>
    <string name="_18">Вопрос 18</string>
    <string name="_19">Вопрос 19</string>
    <string name="_20">Вопрос 20</string>
    <string name="questionNumber">Вопрос №</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bilets">Билеты</string>
    <string name="z1">Тут будут билеты</string>
    <string name="alexandro9911">© Alexandro9911</string>
    <string name="text">text</string>
</resources>
